2009-12-22  Darin Adler  <darin@apple.com>

        Removed DataGrid from results.

        * fast/dom/Window/window-properties-expected.txt: Removed DataGrid classes.
        * fast/dom/prototype-inheritance-2-expected.txt: Ditto.
        * fast/dom/prototype-inheritance-expected.txt: Ditto.
        * fast/js/global-constructors-expected.txt: Ditto.

2009-12-22  Darin Adler  <darin@apple.com>

        Disabled DataGrid tests.

        * fast/dom/HTMLDataGridElement/DataGridColumns-basic.html: Removed.
        * fast/dom/HTMLDataGridElement/DataGridColumns-basic.html-disabled: Copied from fast/dom/HTMLDataGridElement/DataGridColumns-basic.html.
        * fast/dom/HTMLDataGridElement/DataGridColumns-dom-attributes.html: Removed.
        * fast/dom/HTMLDataGridElement/DataGridColumns-dom-attributes.html-disabled: Copied from fast/dom/HTMLDataGridElement/DataGridColumns-dom-attributes.html.
        * fast/dom/HTMLDataGridElement/DataGridColumns-dom.html: Removed.
        * fast/dom/HTMLDataGridElement/DataGridColumns-dom.html-disabled: Copied from fast/dom/HTMLDataGridElement/DataGridColumns-dom.html.
        * fast/dom/HTMLDataGridElement/DataGridDataSource-basic.html: Removed.
        * fast/dom/HTMLDataGridElement/DataGridDataSource-basic.html-disabled: Copied from fast/dom/HTMLDataGridElement/DataGridDataSource-basic.html.

2009-12-22  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        ASSERTION FAILED: m_numNodeListCaches
        https://bugs.webkit.org/show_bug.cgi?id=19526
        <rdar://problem/7431572>

        * fast/dom/NodeList/adoptNode-node-list-cache-expected.txt: Added.
        * fast/dom/NodeList/adoptNode-node-list-cache.html: Added.
        * fast/dom/NodeList/resources: Added.
        * fast/dom/NodeList/resources/adoptNode-node-list-cache-subframe.html: Added.

2009-12-22  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Seidel.

        Upstream platform-specific variant of